--- a/infra/dev/config.dev.ini
+++ b/infra/dev/config.dev.ini
@@ -1,16 +1,16 @@
 [database]
-; Legacy DB driver settings
-type = "sqlite"
-path = ":memory:"
+; Legacy DB driver settings (for backward compatibility)
+type = "mysql"
+path = "/path/to/database.sqlite"
 
 ; Eloquent ORM settings
-driver = "sqlite"
+driver = "mysql"
 host = "localhost"
 port = 3306
-name = ""
-database = ":memory:"
-username = ""
-password = ""
+name = "php_routing_dev"
+database = "php_routing_dev"
+username = "root"
+password = "password"
 charset = "utf8mb4"
 collation = "utf8mb4_unicode_ci"
 prefix = ""
@@ -22,19 +22,19 @@ method = "main"
 [app]
 debug = true
 timezone = "UTC"
-environment = "testing"
+environment = "development"
 
 [cache]
 enabled = false
 
 [session]
-driver = "array"
+driver = "file"
 lifetime = 3600
 
 [api]
-base_url = "https://jsonplaceholder.typicode.com"
+base_url = "http://localhost:8000/api"
 timeout = 30
 
 [logging]
 level = "debug"
-file = "tests.log"
+file = "app.log"
