--- a/infra/test-e2e/site.conf
+++ b/infra/test-e2e/site.conf
@@ -1,9 +1,9 @@
 server {
   index index.php index.html;
-  server_name php-docker.local;
+  server_name php-routing-test.local;
   error_log  /var/log/nginx/error.log;
   access_log /var/log/nginx/access.log;
-  root /app/public;
+  root /var/www/html;
 
   location / {
     try_files $uri $uri/ /index.php?$query_string;
@@ -19,4 +19,3 @@ server {
     fastcgi_param PATH_INFO $fastcgi_path_info;
   }
 }
-
