--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,7 @@
         "filp/whoops": "2.*",
         "twig/twig": "^3.0",
         "guzzlehttp/guzzle": "^7.0",
+        "guzzlehttp/promises": "^2.0",
         "illuminate/database": "^12.20",
         "illuminate/events": "^12.20"
     },
